--- a/S9.ipynb
+++ b/S9.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/JaiBhagat/ERA-Session-9/blob/main/S9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -176,7 +186,7 @@
         "outputId": "812c4fef-94b9-4c3b-b9a7-d3cd18aa280e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 249
+          "height": 229
         }
       },
       "outputs": [
@@ -5953,7 +5963,7 @@
         "outputId": "8f987399-e366-4066-96bf-86fe15d0292b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 230
+          "height": 210
         }
       },
       "outputs": [
@@ -5990,7 +6000,7 @@
         "outputId": "6dc91550-8835-47aa-9e6e-a723a6ccd7cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 468
+          "height": 448
         }
       },
       "outputs": [
@@ -6133,7 +6143,8 @@
     "orig_nbformat": 4,
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "accelerator": "GPU"
   },
